--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Twitter Clone",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.24.0",
     "concurrently": "^6.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0"
   },
