--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "cogo-toast": "^4.2.3",
+    "linkify-plugin-hashtag": "^3.0.4",
+    "linkify-plugin-mention": "^3.0.4",
+    "linkify-react": "^3.0.4",
+    "linkifyjs": "^3.0.5",
     "moment": "^2.29.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -46,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/linkifyjs": "^2.1.4",
     "sass": "^1.45.0"
   }
 }
