added emoji pixker

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^6.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "emoji-picker-react": "^3.5.1",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
