--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "linkify-plugin-hashtag": "^3.0.4",
+    "linkifyjs": "^3.0.5",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
     "validator": "^13.7.0"
