--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "linkify-plugin-hashtag": "^3.0.4",
+    "linkify-plugin-mention": "^3.0.4",
     "linkifyjs": "^3.0.5",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
