--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "client": "cd ../client && npm run start",
+    "client": "cd client && npm run start",
     "start": "node server.js",
     "devStart": "concurrently \"npm run server\" \"npm run client\""
   },
