added moderate content and tweet btn

--- a/.env.test
+++ b/.env.test
@@ -6,3 +6,4 @@ GITHUB_CLIENT_ID = ######################
 GITHUB_OAUTH_CLIENT_SECRET = ###########################
 cloudinary_api_secret = #######################
 cloudinary_api_key = ###################
+MODERATECONTENT_API_KEY = ###########################
