--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "linkifyjs": "^3.0.5",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
