--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-bottom-scroll-listener": "^5.0.0",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
