--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-bottom-scroll-listener": "^5.0.0",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.1.0",
+    "react-query": "^3.39.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
