--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "server": "nodemon server.js",
     "client": "cd client && npm run start",
     "start": "node server.js",
-    "devStart": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
