--- a/.env.test
+++ b/.env.test
@@ -7,3 +7,8 @@ GITHUB_OAUTH_CLIENT_SECRET = ###########################
 cloudinary_api_secret = #######################
 cloudinary_api_key = ###################
 MODERATECONTENT_API_KEY = ###########################
+EMAIL_USER = ###############
+EMAIL_PASS = #################
+EMAIL_HOST = smtp.example.com
+EMAIL_PORT = 465
+HOME_URL = https://zwitter.netlify.app/
