--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "use-debounce": "^8.0.1",
+    "video-react": "^0.16.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
