--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "react-query": "^3.39.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "use-debounce": "^8.0.1",
     "video-react": "^0.16.0",
