--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
-    "cogo-toast": "^4.2.3",
+    "cogo-toast": "git+https://git@github.com/PrasadBroo/cogo-toast.git",
     "emoji-picker-react": "^3.5.1",
     "linkify-plugin-hashtag": "^3.0.4",
     "linkify-plugin-mention": "^3.0.4",
