--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "cogo-toast": "git+https://git@github.com/PrasadBroo/cogo-toast.git",
     "emoji-picker-react": "^3.5.1",
+    "framer-motion": "^6.5.1",
     "linkify-plugin-hashtag": "^3.0.4",
     "linkify-plugin-mention": "^3.0.4",
     "linkify-react": "^3.0.4",
